Setup header/footer components - shows page

--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -1,82 +1,6 @@
-@use './partials/variables' as *;
-@use './partials/mixins' as *;
-@use './partials/reset' as *;
-@use './partials/globals' as *;
-@use './partials/fontface' as *;
-
-/* ###  header/navigation   ### */
-
-.topbar {
-    background-color: $primary-color-main;
-
-    &__container {
-        @extend .container;
-        padding: 0 0;
-
-        @include tablet-responsive {
-            padding: 0 $size-increment-x5-1;
-            justify-content: flex-start;
-            flex-wrap: nowrap;
-            gap: $size-increment-x8;
-        }
-        @include desktop-responsive {padding: 0;}
-    }
-
-    &__back-to-home {
-        padding: $size-increment-x3 0;
-
-        @include align-text(center);
-        @include tablet-responsive {
-            padding: 0;
-            margin: 0;
-        }    
-    }
-
-    &__back-to-home, &__navigation,
-    &__items {
-        flex: 0 0 100%;
-
-        @include tablet-responsive {flex: 0 0 auto;}
-    }
-
-    &__items {
-        @extend .container;
-        padding: 0 0;
-
-        list-style: none;
-        align-items: flex-start;
-
-        @include tablet-responsive {gap: $size-increment-x5;}
-    }
-
-    &__item, &__link {transition: all .2s ease;}
-
-    &__item {
-        flex: 0 0 50%;
-        padding: 0 $size-increment-x3 $size-increment-x2;
-        font-weight: $font-weight-demi;
-
-        &:hover,
-        &--active {
-            border-bottom: $size-increment-x1 solid $primary-color-subsidiary;
-            cursor: pointer;
-        }
-        &:hover > a,
-        &--active > a {
-            color: $primary-color-subsidiary;
-        }
-
-        @include align-text(center);
-        @include tablet-responsive {
-            padding: $size-increment-x4 0;
-            flex: 0 0 auto;
-        }
-    }
-
-    &__link {color: $primary-color-alternate;}
-}
-
-/* ###  footer/contact   ### */
+@use './partials/includes' as *;
+@use './partials/header' as *;
+@use './partials/footer' as *;
 
 .hero {
     background: url("../assets/images/hero-bio.jpg") center no-repeat;
@@ -382,109 +306,3 @@
 
 /* ###  footer/contact   ### */
 
-.contact {
-    background-color: $primary-color-main;
-
-    &__container {
-        @extend .container;
-
-        justify-content: flex-start;
-
-        @include padding-component("mobile");
-        @include tablet-responsive {
-            @include padding-component("tablet");
-        }
-    }
-
-    &__title {
-        @include flex-item-realestate(1, 0, 100%);
-        font-weight: $font-weight-demi;
-
-        @include tablet-responsive {
-            font-size: $size-increment-x6;
-            order: -1;
-            @include flex-item-realestate(1, 1, 30%);
-        }
-
-        @include desktop-responsive {@include flex-item-realestate(0, 1, 30%);}
-        @include padding-headline("mobile");
-        @include tablet-responsive {@include padding-headline("tablet");}
-    }
-
-    &__social {
-        @include flex-item-realestate(1, 0, 100%);
-        display: flex;
-        gap: $size-increment-x5;
-
-        @include tablet-responsive {
-            order: -1;
-            @include flex-item-realestate(1, 1, 30%);
-        }
-
-        @include desktop-responsive {@include flex-item-realestate(0, 1, 30%);}
-    }
-
-    &__icon {
-        @include tablet-responsive {width: 30px;}
-
-        &--facebook {
-            @include tablet-responsive {width: 18px;}
-        }
-        &--twitter {
-            @include tablet-responsive {width: 35px;}
-        }
-    }
-
-    &__point {
-        @include flex-item-realestate(1, 0, 100%);
-        @include tablet-responsive {@include flex-item-realestate(1, 0, 30%);}
-        @include desktop-responsive {@include flex-item-realestate(0, 1, 30%);}
-    }
-
-    &__person {
-        @include padding-headline("mobile");
-
-        @include tablet-responsive {
-            padding-top: 0;
-            @include padding-component("tablet");
-        }
-    }
-    &__location {
-        @include padding-component("mobile");
-
-        @include tablet-responsive {@include padding-component("tablet");}
-    }
-
-
-    &__title, &__name,
-    &__company, &__copyright {color: $primary-color-subsidiary;}
-
-    &__name, &__company {font-weight: $font-weight-bold;}
-    &__icon, &__logo {vertical-align: bottom;}
-
-    &__back-to-home {
-        display: block;
-        margin-top: $size-increment-x7;
-
-        @include padding-component("mobile");
-
-        @include tablet-responsive {
-            @include flex-item-realestate(1, 1, 30%);
-            padding-bottom: 0;
-            margin-top: 0;
-            order: -1;
-            text-align: right;
-        }
-        @include desktop-responsive {@include flex-item-realestate(1, 0, 40%);}
-    }
-
-    &__copyright {
-        @include flex-item-realestate(1, 0, 100%);
-        font-size: 12px;
-        
-        @include tablet-responsive {
-            font-size: $size-increment-x3;
-            margin-top: $size-increment-x7;
-        }
-    }
-}
