--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -1,39 +1,21 @@
-@use './partials/includes' as *;
+@use './partials/variables' as *;
+@use './partials/reset' as *;
+@use './partials/globals' as *;
+@use './partials/fontface' as *;
+@use './partials/mixins' as *;
+
 @use './partials/header' as *;
 @use './partials/footer' as *;
+@use './partials/hero' as *;
 
 .hero {
-    background: url("../assets/images/hero-bio.jpg") center no-repeat;
-    background-size: cover;
-
-    height: 32vh;
+    @include set-background-image("hero-shows.jpg");
     
     @include custom-responsive("min", 450px) {height: 36vh;}
     @include custom-responsive("min", 550px) {height: 40vh;}
     @include custom-responsive("min", 650px) {height: 48vh;}
     @include tablet-responsive {height: 60vh;}
     @include desktop-responsive {height: 80vh;}
-
-    &__overlay {
-        height: 100%;
-        background-color: rgba(0,0,0,.5);
-    }
-
-    &__container {
-        @extend .container;
-
-        height: 100%;
-        justify-content: flex-start;
-    }
-
-    &__title {
-        color: $primary-color-subsidiary;
-
-        @include custom-responsive("min", 550px) {font-size: $size-increment-x5;}
-        @include custom-responsive("min", 650px) {font-size: $size-increment-x6;}
-
-        @include tablet-responsive {font-size: $size-increment-x8;}
-    }
 }
 
 /* ###  about/bio   ### */
