--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -153,7 +153,7 @@
         }
 
         @include desktop-responsive {
-            max-width: 50%;
+            max-width: 55%;
             margin: auto;
         }
     }
@@ -162,7 +162,7 @@
         align-self: flex-start;
 
         &--active {
-            margin-top: $size-increment-x4;
+            margin-top: $size-increment-x5;
 
             @include tablet-responsive {
                 margin-top: 1.85rem;
@@ -174,12 +174,17 @@
         @extend .flex-container;
         justify-content: flex-start;
 
-        width: $size-increment-x7;
-        height: $size-increment-x7;
+        width: $size-increment-x5-1;
+        height: $size-increment-x5-1;
         border-radius: 50%;
         overflow: hidden;
         margin-right: $size-increment-x3;
         background-color: $secondary-color-alternate;
+
+        @include tablet-responsive {
+            width: $size-increment-x7;
+            height: $size-increment-x7;
+        }
     }
 
     &__image {
@@ -256,7 +261,7 @@
     &__items {
         @include flex-item-realestate(1, 1, 100%);
         @include desktop-responsive {
-            max-width: 50.1%;
+            max-width: 55%;
             margin: auto;
         }
     }
